--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0.0"
     },
     "engines": {
-        "node": "v20.12.2"
+        "node": "20.x",
+        "npm": "10.x"
     }
 }
